search fixed, trace creation form changed

--- a/source/static/html/search.html
+++ b/source/static/html/search.html
@@ -46,7 +46,7 @@
         <div class="well col-md-12">
             <div class="pull-left col-xs-12">
                 <span class="pull-left" >Назва:	&nbsp;</span>
-                <a href="/track/id/{[{ hit._source.id }]}" target="_blank" class="clearfix"> {[{ hit._source.requisits }]}</a>
+                <a href="/track/id/{[{ hit._source.trace_id }]}" target="_blank" class="clearfix"> {[{ hit._source.reg_name }]}</a>
             </div>
             <div class="pull-left col-xs-4">Рішення: {[{ hit._source.reg_date }]}</div>
             <div class="pull-left col-xs-3">Дата реєстрації: {[{ hit._source.gov_choice }]}</div>
