--- a/source/static/html/track/e_info.html
+++ b/source/static/html/track/e_info.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12 clearfix">
     <div class="panel panel-default requisits">
-        <div class="panel-heading">Назва та реквізити регуляторного акта</div>
+        <div class="panel-heading">Назва регуляторного акта</div>
         <div class="panel-body" inline-comment="track.pl.reg_name" on-save="saveChanges('reg_name', 'i', value)" on-cancel="log('CANCEL', value)"></div>
     </div>
 </div>
