--- a/source/static/html/track/v_info.html
+++ b/source/static/html/track/v_info.html
@@ -1,13 +1,13 @@
 <div class="col-xs-12 clearfix">
     <div class="panel panel-default">
-        <div class="panel-heading">Назва та реквізити регуляторного акта</div>
+        <div class="panel-heading">Назва регуляторного акта</div>
         <div class="panel-body">{[{ track.pl.reg_name }]}</div>
     </div>
 </div>
 
 <div class="col-xs-12 clearfix">
     <div class="panel panel-default">
-        <div class="col-xs-8 panel-heading">Реквізити реєстрації регуляторного акта в Мінюсті</div>
+        <div class="col-xs-8 panel-heading">Реквізити реєстрації регуляторного акта в Міністерстві Юстицій</div>
         <div class="col-xs-4 panel-heading">&nbsp;</div>
         <div class="clearfix">
             <div class="col-xs-2 pull-left panel-body">Дата реєстрації</div>
