--- a/source/static/html/create.html
+++ b/source/static/html/create.html
@@ -3,14 +3,11 @@
     <div class="clearfix form-save-buttons">
         <h2 class="col-xs-11">Додати відстеження</h2>
         <!--<div class="col-xs-2"><button type="submit" class="btn btn-primary pull-left">Зберегти чорновик</button></div>-->
-        <div class="col-xs-1">
-            <button type="submit" class="btn btn-primary pull-left" ng-click="addTrack()">Додати</button>
-        </div>
     </div>
-    <h3 class="col-xs-12 track-header">Основна інформація</h3>
+    <h3 class="col-xs-12 track-header">Назва реквізити реєстрації регуляторного акта в Міністерстві Юстицій</h3>
     <div class="col-xs-12 clearfix">
         <div class="panel panel-default">
-            <div class=" panel-heading">Назва та реквізити регуляторного акта</div>
+            <div class=" panel-heading">Назва регуляторного акта</div>
             <div class="panel-body">
                 <input type="text" ng-model="form_data.info.reg_name" class="form-control"/>
             </div>
@@ -19,7 +16,7 @@
 
     <div class="col-xs-12 clearfix">
         <div class="panel panel-default">
-            <div class="col-xs-8 panel-heading">Реквізити реєстрації регуляторного акта в Мінюсті</div>
+            <div class="col-xs-8 panel-heading">Реквізити реєстрації регуляторного акта в Міністерстві Юстицій</div>
             <div class="col-xs-4 panel-heading">&nbsp;</div>
             <div class="clearfix">
                 <div class="col-xs-2 pull-left panel-body high">
@@ -50,7 +47,7 @@
 
     <div class="col-xs-12 clearfix">
         <div class="panel panel-default">
-            <div class="panel-heading">Розробник регуляторного акта{[{ form_data.info.developer }]}</div>
+            <div class="panel-heading">Розробник регуляторного акта</div>
             <div class="panel-body developer">
                 <div >
                     <input type="text" ng-model="form_data.info.developer"
@@ -114,95 +111,6 @@
                 <textarea class="form-control" ng-model="form_data.info.i_comment"></textarea>
             </div>
         </div>
-    </div>
-
-    <div class="clearfix">
-        <h3 class="col-xs-12 track-header">Базове відстеження</h3>
-        <div class="col-xs-6">
-            <div class="panel panel-default clearfix">
-                <div class="panel-heading">Термін здійснення заходів з відстеження</div>
-                <div class="panel-body">
-                    <input class="form-control"
-                           ng-model="form_data.basic.b_termin_zakon" type="date"
-                           ng-change="form_data.basic.b_termin_zakon = dateConvert(form_data.basic.b_termin_zakon)"
-                           placeholder="yyyy-MM-dd" min="1999-01-01" max="2113-12-31">
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-6 ">
-            <div class="panel panel-default pull-left" style="width: 79.2%;">
-                <div class="panel-heading">Результати відстеження результативності</div>
-                <div class="panel-body">
-                    <input class="form-control" ng-model="form_data.basic.b_result">
-                </div>
-            </div>
-            <div class="panel panel-default pull-left">
-                <div class="panel-heading">Ефективне?</div>
-                <div class="panel-body">
-                    <switcher ng-model="form_data.basic.b_result_bool"
-                              true-value="'1'" true-label="Так"
-                              false-value="'0'" false-label="Ні">
-                    </switcher>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-6">
-            <div class="panel panel-default clearfix">
-                <div class="panel-heading">Дата підписання  звіту  про відстеження результативності регуляторного акта</div>
-                <div class="panel-body">
-                    <input  class="form-control"
-                            ng-model="form_data.basic.b_signed" type="date"
-                            ng-change="form_data.basic.b_signed = dateConvert(form_data.basic.b_signed)"
-                            placeholder="yyyy-MM-dd" min="1999-01-01" max="2113-12-31">
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-6">
-            <div class="panel panel-default clearfix">
-                <div class="panel-heading">Дата оприлюденення  звіту  про відстеження результативності регуляторного акта</div>
-                <div class="panel-body">
-                    <input class="form-control" ng-model="form_data.basic.b_publicated" type="date"
-                           ng-change="form_data.basic.b_publicated = dateConvert(form_data.basic.b_publicated)"
-                           placeholder="yyyy-MM-dd" min="1999-01-01" max="2113-12-31">
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-6">
-            <div class="panel panel-default clearfix">
-                <div class="panel-heading">Дата надання звіту  про відстеження результативності регуляторного акта до Держпідприємництва</div>
-                <div class="panel-body">
-                    <input class="form-control" ng-model="form_data.basic.b_gived" type="date"
-                           ng-change="form_data.basic.b_gived = dateConvert(form_data.basic.b_gived)"
-                           placeholder="yyyy-MM-dd" min="1999-01-01" max="2113-12-31">
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-6 switch">
-            <div class="panel panel-default pull-left" style="width: 79.2%;">
-                <div class="panel-heading">Висновок Комітету щодо відповідності звіту вимогам постанови КМУ від 11.03.04 р. №308</div>
-                <div class="panel-body">
-                    <input  class="form-control" ng-model="form_data.basic.b_cnclsn">
-                </div>
-            </div>
-            <div class="panel panel-default pull-left">
-                <div class="panel-heading high">Порушено?</div>
-                <div class="panel-body">
-                    <switcher ng-model="form_data.basic.b_cnclsn_bool"
-                              true-value="'1'" true-label="Так"
-                              false-value="'0'" false-label="Ні">
-                    </switcher>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-xs-12 clearfix comment">
-        <div class="panel panel-default">
-            <div class=" panel-heading">Коментар</div>
-            <div class="panel-body">
-                <textarea class="form-control" ng-model="form_data.basic.b_comment"></textarea>
-            </div>
-        </div>
         <div class="clearfix form-save-buttons">
             <div class="col-xs-11"></div>
             <!--<div class="col-xs-2"><button type="submit" class="btn btn-primary pull-left" >Зберегти чорновик</button></div>-->
@@ -211,5 +119,6 @@
             </div>
         </div>
     </div>
+
 
 </form>
